--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -9,6 +9,7 @@
     <body>
         <div class="main-content">
             {{>header}}
+            <p> Anshul Bhatia </p>
             <img class="portrait" src='/img/610757.jpg'>
         </div>
         {{>footer}}
