--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -12,6 +12,13 @@
             <p> Anshul Bhatia </p>
             <img class="portrait" src='/img/610757.jpg'>
         </div>
+        <div></div>
+            <a href="https://www.linkedin.com/in/anshul-bhatia-3b626014a" class="badge badge-primary" id="abc">LinkedIn Profile</a>
+            <br>
+            <a href="https://www.instagram.com/mr_anshulbhatia?r=nametag" class="badge badge-danger" id="abc">Danger</a>
+
+        </div>
+        
         {{>footer}}
     </body>
 </html>
