--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,16 +1,11 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <a class="navbar-brand" href="#">Weather App</a>
-  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-    <span class="navbar-toggler-icon"></span>
-  </button>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+  <div class="collapse navbar-collapse" id="aaaa">
     <div class="navbar-nav">
       <a class="nav-item nav-link active" href="/">Weather <span class="sr-only">(current)</span></a>
       <a class="nav-item nav-link" href="/help">Help</a>
       <a class="nav-item nav-link" href="/about">About</a>
     </div>
-  </div>
 </nav>
     <h1>{{title}}</h1>
 </header>
