--- a/templates/views/about.hbs
+++ b/templates/views/about.hbs
@@ -15,7 +15,7 @@
         <div></div>
             <a href="https://www.linkedin.com/in/anshul-bhatia-3b626014a" class="badge badge-primary" id="abc">LinkedIn Profile</a>
             <br>
-            <a href="https://www.instagram.com/mr_anshulbhatia?r=nametag" class="badge badge-danger" id="abc">Danger</a>
+            <a href="https://www.instagram.com/mr_anshulbhatia?r=nametag" class="badge badge-danger" id="abc">Instagram profile</a>
 
         </div>
         
