--- a/templates/views/index.hbs
+++ b/templates/views/index.hbs
@@ -3,7 +3,7 @@
     <head>
             <title>Weather</title>
             <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-            <link rel="icon" href="http://files.mead.io/1079631c29ea">
+            <link rel="icon" href="/public/img/weather.png">
             <link rel='stylesheet' href='./css/styles.css'>
                 
     </head>
@@ -11,7 +11,7 @@
         <div class="main-content">
             {{>header}}
 
-            <p>Use this site to get your weather</p>
+            <p>Use this site to get weather of the entered location</p>
 
             <form>
                 <input type="text" placeholder="Location">
