--- a/templates/partials/header.hbs
+++ b/templates/partials/header.hbs
@@ -1,8 +1,8 @@
 <header>
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-  <div class="collapse navbar-collapse" id="aaaa">
+  <div class="collapse navbar-collapse">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active" href="/">Weather <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link active" href="/">Weather <span class="sr-only"></span></a>
       <a class="nav-item nav-link" href="/help">Help</a>
       <a class="nav-item nav-link" href="/about">About</a>
     </div>
